--- a/app/business-accounts/heijmans/font/heijmans/stylesheet.css
+++ b/app/business-accounts/heijmans/font/heijmans/stylesheet.css
@@ -1,8 +1,8 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-light.cb2aec08813a.woff') format('woff2'),
-        url('heijmans-light.cb2aec08813a.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -11,32 +11,32 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-light.cb2aec08813a.woff') format('woff2'),
-        url('heijmans-light.cb2aec08813a.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-light.cb2aec08813a.woff') format('woff2'),
-        url('heijmans-light.cb2aec08813a.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-light.cb2aec08813a.woff') format('woff2'),
-        url('heijmans-light.cb2aec08813a.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-light.cb2aec08813a.woff') format('woff2'),
-        url('heijmans-light.cb2aec08813a.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-normal.94796970ca33.woff') format('woff2'),
-        url('heijmans-normal.94796970ca33.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-normal.94796970ca33.woff') format('woff2'),
-        url('heijmans-normal.94796970ca33.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -63,8 +63,8 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-normal.94796970ca33.woff') format('woff2'),
-        url('heijmans-normal.94796970ca33.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -73,8 +73,8 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-normal.94796970ca33.woff') format('woff2'),
-        url('heijmans-normal.94796970ca33.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 800;
     font-style: normal;
     font-display: swap;
@@ -82,8 +82,8 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('heijmans-normal.94796970ca33.woff') format('woff2'),
-        url('heijmans-normal.94796970ca33.woff') format('woff');
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+        url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
