--- a/app/business-accounts/heijmans/font/heijmans/stylesheet.css
+++ b/app/business-accounts/heijmans/font/heijmans/stylesheet.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: normal;
     font-style: normal;
@@ -11,7 +11,7 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: 100;
     font-style: normal;
@@ -19,7 +19,7 @@
 }
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: 200;
     font-style: normal;
@@ -27,7 +27,7 @@
 }
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: 300;
     font-style: normal;
@@ -35,7 +35,7 @@
 }
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-light.cb2aec08813a.woff') format('woff');
     font-weight: 400;
     font-style: normal;
@@ -45,7 +45,7 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 500;
     font-style: normal;
@@ -54,7 +54,7 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 600;
     font-style: normal;
@@ -63,7 +63,7 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 700;
     font-style: normal;
@@ -73,7 +73,7 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 800;
     font-style: normal;
@@ -82,7 +82,7 @@
 
 @font-face {
     font-family: 'heijmans';
-    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff2'),
+    src: url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff2') format('woff2'),
         url('https://github.com/connectflow/assets/raw/main/app/business-accounts/heijmans/font/heijmans/heijmans-normal.94796970ca33.woff') format('woff');
     font-weight: 900;
     font-style: normal;
