--- a/app/business-accounts/heijmans/font/heijmans/stylesheet.css
+++ b/app/business-accounts/heijmans/font/heijmans/stylesheet.css
@@ -1,4 +1,32 @@
 @font-face {
+    font-family: 'Heijmans Normal';
+    src: url('Heijmans-Normal.woff2') format('woff2'),
+        url('Heijmans-Normal.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+@font-face {
+    font-family: 'Heijmans';
+    src: url('Heijmans-Light.woff2') format('woff2'),
+        url('Heijmans-Light.woff') format('woff');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heijmans';
+    src: url('Heijmans-Light.woff2') format('woff2'),
+        url('Heijmans-Light.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
     font-family: 'Heijmans';
     src: url('Heijmans-Light.woff2') format('woff2'),
         url('Heijmans-Light.woff') format('woff');
@@ -8,11 +36,58 @@
 }
 
 @font-face {
-    font-family: 'Heijmans Normal';
-    src: url('Heijmans-Normal.woff2') format('woff2'),
-        url('Heijmans-Normal.woff') format('woff');
-    font-weight: normal;
+    font-family: 'Heijmans';
+    src: url('Heijmans-Light.woff2') format('woff2'),
+        url('Heijmans-Light.woff') format('woff');
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'Heijmans';
+    src: url('Heijmans-Normal.woff2') format('woff2'),
+        url('Heijmans-Normal.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heijmans';
+    src: url('Heijmans-Normal.woff2') format('woff2'),
+        url('Heijmans-Normal.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Heijmans';
+    src: url('Heijmans-Normal.woff2') format('woff2'),
+        url('Heijmans-Normal.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Heijmans';
+    src: url('Heijmans-Normal.woff2') format('woff2'),
+        url('Heijmans-Normal.woff') format('woff');
+    font-weight: 800;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Heijmans';
+    src: url('Heijmans-Normal.woff2') format('woff2'),
+        url('Heijmans-Normal.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
+
+
 
