--- a/app/business-accounts/heijmans/font/heijmans/stylesheet.css
+++ b/app/business-accounts/heijmans/font/heijmans/stylesheet.css
@@ -9,40 +9,41 @@
 
 
 @font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff') format('woff');
+    font-family: 'Heijmans Normal';
+    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff2') format('woff2'),
+        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff') format('woff');
+    font-family: 'Heijmans Normal';
+    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff2') format('woff2'),
+        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff') format('woff');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff') format('woff');
+    font-family: 'Heijmans Normal';
+    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff2') format('woff2'),
+        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff') format('woff');
+    font-family: 'Heijmans Normal';
+    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff2') format('woff2'),
+        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
+
 
 @font-face {
     font-family: 'Heijmans';
@@ -85,6 +86,56 @@
     font-style: normal;
     font-display: swap;
 }
+
+
+
+/*
+
+@font-face {
+    font-family: 'Heijmans Normal';
+    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff2') format('woff2'),
+        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Normal.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heijmans';
+    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff2') format('woff2'),
+        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff') format('woff');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heijmans';
+    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff2') format('woff2'),
+        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heijmans';
+    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff2') format('woff2'),
+        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heijmans';
+    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff2') format('woff2'),
+        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/heijmansHeijmans-Light.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+*/
 
 
 
