--- a/app/business-accounts/heijmans/font/heijmans/stylesheet.css
+++ b/app/business-accounts/heijmans/font/heijmans/stylesheet.css
@@ -1,93 +1,18 @@
 @font-face {
     font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-
-@font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Light.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Light.woff') format('woff');
-    font-weight: 100;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Light.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Light.woff') format('woff');
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Light.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Light.woff') format('woff');
+    src: url('Heijmans-Light.woff2') format('woff2'),
+        url('Heijmans-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Light.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Light.woff') format('woff');
-    font-weight: 400;
+    font-family: 'Heijmans Normal';
+    src: url('Heijmans-Normal.woff2') format('woff2'),
+        url('Heijmans-Normal.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
-
-@font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff') format('woff');
-    font-weight: 800;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'Heijmans';
-    src: url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/connectflow/assets/main/app/business-accounts/heijmans/font/Heijmans-Normal.woff') format('woff');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
-
-
-
-
 
