--- a/app/business-accounts/PorscheNext/stylesheet.css
+++ b/app/business-accounts/PorscheNext/stylesheet.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Qvsmubptjkjfcgslyusdyvwsscw';
+    font-family: 'PorscheNext';
     src: url('Qvsmubptjkjfcgslyusdyvwsscw.woff2') format('woff2'),
         url('Qvsmubptjkjfcgslyusdyvwsscw.woff') format('woff');
     font-weight: bold;
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-    font-family: 'Glcgraaubwdllusysfexqwhdppu';
+    font-family: 'PorscheNext';
     src: url('Glcgraaubwdllusysfexqwhdppu.woff2') format('woff2'),
         url('Glcgraaubwdllusysfexqwhdppu.woff') format('woff');
     font-weight: normal;
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-    font-family: 'Wpfutaplpiiljhwcdxnjtwzlwqs';
+    font-family: 'PorscheNext';
     src: url('Wpfutaplpiiljhwcdxnjtwzlwqs.woff2') format('woff2'),
         url('Wpfutaplpiiljhwcdxnjtwzlwqs.woff') format('woff');
     font-weight: 300;
