--- a/app/business-accounts/heineken/stylesheet.css
+++ b/app/business-accounts/heineken/stylesheet.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Heineken Serif 18';
+    font-family: 'Heineken Serif';
     src: url('HeinekenSerif18-Bold.woff2') format('woff2'),
         url('HeinekenSerif18-Bold.woff') format('woff');
     font-weight: bold;
