--- a/app/business-accounts/luchtmacht/style.css
+++ b/app/business-accounts/luchtmacht/style.css
@@ -16,3 +16,8 @@
 .item {
     padding: 16px !important;
 }
+
+.page-action-button{
+    font-size: 16px !important;
+    padding: 10px 16px !important;
+}
