--- a/app/business-accounts/luchtmacht/style.css
+++ b/app/business-accounts/luchtmacht/style.css
@@ -17,6 +17,10 @@
     padding: 16px !important;
 }
 
+article {
+    padding: 0px !important;
+}
+
 .page-action-button{
     font-size: 16px !important;
     padding: 10px 16px !important;
