--- a/app/business-accounts/luchtmacht/style.css
+++ b/app/business-accounts/luchtmacht/style.css
@@ -1,6 +1,10 @@
 @font-face{font-family:verdana;font-style:italic;font-weight:400;src:local('Verdana'),url(https://fonts.cdnfonts.com/s/26084/VERDANAI.woff) format('woff')}
 
 
+* {
+    font-weight: 500 !important;
+}
+
 .user-info h1 {
     font-size: 26px !important;
 }
