--- a/app/business-accounts/hemink/stylesheet.css
+++ b/app/business-accounts/hemink/stylesheet.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-.item{
+article {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1) !important;
 }
