--- a/app/business-accounts/powerrental/hamburg/font-copy.css
+++ b/app/business-accounts/powerrental/hamburg/font-copy.css
@@ -109,37 +109,37 @@
 @font-face {
   font-family: "Hamburg";
   src: url('webFonts/HamburgTSRegularIta/font.woff2') format('woff2'), url('webFonts/HamburgTSRegularIta/font.woff') format('woff');
-  font-weight: 400; /* Regular Italic */
+  font-weight: 400; 
 }
 @font-face {
   font-family: "Hamburg";
   src: url('webFonts/HamburgTSMediumIta/font.woff2') format('woff2'), url('webFonts/HamburgTSMediumIta/font.woff') format('woff');
-  font-weight: 500; /* Medium Italic */
+  font-weight: 500; 
 }
 @font-face {
   font-family: "Hamburg";
   src: url('webFonts/HamburgTSLightIta/font.woff2') format('woff2'), url('webFonts/HamburgTSLightIta/font.woff') format('woff');
-  font-weight: 300; /* Light Italic */
+  font-weight: 300; 
 }
 @font-face {
   font-family: "Hamburg";
   src: url('webFonts/HamburgTSDemiBoldIta/font.woff2') format('woff2'), url('webFonts/HamburgTSDemiBoldIta/font.woff') format('woff');
-  font-weight: 600; /* DemiBold Italic */
+  font-weight: 600; 
 }
 @font-face {
   font-family: "Hamburg";
   src: url('webFonts/HamburgTSBoldIta/font.woff2') format('woff2'), url('webFonts/HamburgTSBoldIta/font.woff') format('woff');
-  font-weight: 700; /* Bold Italic */
+  font-weight: 700; 
 }
 @font-face {
   font-family: "Hamburg";
   src: url('webFonts/HamburgTSXBoldIta/font.woff2') format('woff2'), url('webFonts/HamburgTSXBoldIta/font.woff') format('woff');
-  font-weight: 800; /* XBold Italic */
+  font-weight: 800;
 }
 @font-face {
   font-family: "Hamburg";
   src: url('webFonts/HamburgTSXLightIta/font.woff2') format('woff2'), url('webFonts/HamburgTSXLightIta/font.woff') format('woff');
-  font-weight: 300; /* XLight Italic */
+  font-weight: 300; 
 }
 */
 
